--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,13 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+# The command to build your app. This command is run by App Hosting when
+# you deploy your app.
+buildCommand: npm run build
+
+# The command to start your app.
+startCommand: npm start
+
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
