I see this error with the app, reported by NextJS, please fix it. The er

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,3 @@
-{ 
-    "compilerOptions": {
-        "baseUrl": "."
-      }    
+{
+    // This file is intentionally left empty to avoid conflicts with tsconfig.json
 }
